<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".RegistrationActivity">

    <!-- Scroll View layout chosen for large activity -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/user_symbol3"
                android:scaleType="fitCenter"
                android:maxWidth="100dp"
                android:maxHeight="100dp"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@color/white" />

            <EditText
                android:id="@+id/etSignUpUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:hint="@string/username"
                android:autofillHints="@string/username"
                android:inputType="text"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:backgroundTint="@color/black"
                android:gravity="center_horizontal" />

            <EditText
                android:id="@+id/etSignUpEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:hint="@string/email"
                android:autofillHints="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:backgroundTint="@color/black"
                android:gravity="center_horizontal" />

            <EditText
                android:id="@+id/etContactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:hint="@string/contact_number"
                android:autofillHints="@string/contact_number"
                android:inputType="number"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:backgroundTint="@color/black"
                android:gravity="center_horizontal"
                />

            <EditText
                android:id="@+id/etSignUpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:autofillHints="@string/password"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:backgroundTint="@color/black"
                android:gravity="center_horizontal"
                />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:hint = "@string/confirm_password"
                android:autofillHints = "@string/confirm_password"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:backgroundTint="@color/black"
                android:gravity="center_horizontal" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:backgroundTint="@color/purple_500"
                />

            <ProgressBar
                android:id="@+id/SignUpProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/already_registered_sign_in"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:backgroundTint="@color/purple_500"
                />

            <!-- Ghost View added to Fit scrollView Widgets -->
            <View
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>